# pso

./: Cargo.toml  Dockerfile  README.md
src/: cli.rs  lib.rs  main.rs  report.rs  shard.rs
tests/: cli_tests.rs  report_tests.rs  shard_tests.rs
