[package]
name = "pso"
version = "0.1.0"
edition = "2024"
description = "Playwright Shard Orchestrator – run Playwright shards in parallel with resource controls"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
